--- a/README
+++ b/README
@@ -12,10 +12,11 @@ development.
 
 EventDance currently requires:
 
-  * GLib >= 2.23.0
-  * libsoup-2.4 >= 2.23.0
-  * gnutls >= 2.6.5
+  * GLib >= 2.28.0
+  * libsoup-2.4 >= 2.28.0
+  * gnutls >= 2.12.0
   * uuid >= 2.16.0
+  * json-glib >= 0.14.0
 
 If you are building the API reference you will also need:
 
@@ -69,6 +70,13 @@ in autogen.sh:
         enable server-side Javascript tests and examples. Requires GJS, and
         GObject-Introspection present on system and enabled in build
         options.
+
+ --enable-tests
+        enable automated unit and functional tests. Default is enabled.
+
+ --enable-debug
+        enable debug mode by adding -ggdb, -g3, -O0 and -Werror to CFLAGS.
+        Default is disabled.
 
 VERSIONING
 ==========
